# TikTokTechJam2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json
agents/manager/: agent.py  tools.py
agents/web/: exported_tool.py
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  games.py  main.py  pyproject.toml  test_agentic_gen.py
backend/agent/: tools.py
backend/agents/manager/: agent.py  instructions.py
backend/agents/web/: agent.py  instructions.py  tools.py
backend/mcp/playwright/: launch_mcp.sh
backend/prompts/: describe_screenshot.md  generate_captcha.md  generate_captcha.txt
n/: package.json
old-backend/ignore/: agent.py  genai.py  mcps.py  tools.py
old-backend/prompts/: generate_captcha.md
static/: video1.html  video2.html  video3.MOV  video3.html
tiktok-frontend/: README.md  lynx.config.ts  package-lock.json  package.json
tiktok-frontend/src/: App.tsx  constants.ts  store.ts
tiktok-frontend/src/components/: Badges.tsx  BadgesMainPageUI.tsx  BottomBar.tsx  Button.tsx  Captcha.tsx  LivestreamComponent.tsx  Popup.tsx  VideoComponent.tsx  button.tsx
tiktok-ios/: .gitignore  LynxFeedVideo.h  LynxFeedVideo.m  LynxWebView.m  Podfile  main.lynx.bundle  main.web.bundle
tiktok-ios/Hello-Lynx/: LynxFeedVideo.m  LynxWebView.h  LynxWebView.m
tiktok-ios/Hello-Lynx.xcodeproj/: project.pbxproj
tiktok-web/: README.md  package-lock.json  package.json  rsbuild.config.mjs
tiktok-web/src/: App.css  App.jsx
tiktoktest/: package-lock.json  package.json
tiktoktest/src/: App.jsx
(+7 files in other folders)
